--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node https-starter.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -29,6 +29,7 @@
     "react-lottie-player": "^1.4.3",
     "react-player": "^2.10.1",
     "react-scroll": "^1.8.7",
+    "storyblok-js-client": "^7.2.1",
     "storyblok-rich-text-react-renderer": "^2.6.0",
     "typewriter-effect": "^2.19.0"
   },
